# fable-raytracer-ios-net6

./: .gitignore  FableRustRaytracerNet6iOS.sln  README.md
FableRustRaytracerNet6iOS/: AppDelegate.fs  FableRustRaytracerNet6iOS.fsproj  Info.plist  Main.fs
FableRustRaytracerNet6iOS/rust-src/: Cargo.toml  build-rust.sh  cbindgen.toml
FableRustRaytracerNet6iOS/rust-src/src/: ffi_ios.rs  lib.rs
